...
            android:orientation="vertical"

            android:layout_marginStart="16dp"
           >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:lineHeight="26sp"
                android:text="@{ showOriginalTitles ? obj.getOriginalTitle() : obj.getTitle()}"
                android:textAppearance="?attr/textAppearanceHeadline3" />


            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{obj.overview}"
                android:ellipsize="end"
                android:maxLines="3"
                android:textAppearance="?attr/textAppearanceBody1"
...
