...

        android:layout_marginBottom="16dp"

        app:layout_constraintTop_toBottomOf="@id/tv_error_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_try_again"/>


    <Button
        style="?attr/buttonStyle"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
...
